# pkg/handlers/flags.go
@@ -26,18 +26,18 @@ type FlagInfo struct {
 	Metadata FlagMetadata `json:"metadata"`
 }
 
-// // Flags returns a flags handler
-// // @Summary Get all flags
-// // @Tags Flags
-// // @Description Get all flags value and metadata for a visitor ID and context
-// // @ID get-flags
-// // @Accept  json
-// // @Produce  json
-// // @Param request body campaignsBodySwagger true "Flag request body"
-// // @Success 200 {object} map[string]FlagInfo{}
-// // @Failure 400 {object} errorMessage
-// // @Failure 500 {object} errorMessage
-// // @Router /flags [post]
+// Flags returns a flags handler
+// @Summary Get all flags
+// @Tags Flags
+// @Description Get all flags value and metadata for a visitor ID and context
+// @ID get-flags
+// @Accept  json
+// @Produce  json
+// @Param request body campaignsBodySwagger true "Flag request body"
+// @Success 200 {object} map[string]FlagInfo{}
+// @Failure 400 {object} errorMessage
+// @Failure 500 {object} errorMessage
+// @Router /flags [post]
 func Flags(context *connectors.DecisionContext) func(http.ResponseWriter, *http.Request) {
 	return func(w http.ResponseWriter, req *http.Request) {
 		apilogic.HandleCampaigns(w, req, context, requestFlagsHandler, utils.NewTracker())
